--- a/style.css
+++ b/style.css
@@ -1,24 +1,25 @@
 body
 {
-	background:#292929;
-	font-family:arial;
-	color:#fff;
-	margin:0px;
+background:#292929;
+font-family:arial;
+color:#fff;
+margin:0px;
 }
 
 .container1
 {
-	min-height:75px;
+min-height:75px;
 }
 
 .container2
 {
-	min-height:75px;
+min-height:75px;
 }
 
 .container3
 {
-	min-height:75px;
+min-height:75px;
+
 }
 
 .container4
@@ -28,134 +29,70 @@ body
 
 .container5
 {
-	padding-top:15px;
-	min-height:75px;
+padding-top:15px;
+min-height:75px;
 
 }
 
 .container5a
 {
-	padding-top:15px;
-	min-height:75px;
+padding-top:15px;
+min-height:75px;
 
 }
 
 .container6
 {
-	min-height:75px;
+min-height:75px;
+
 }
 
 .container7
 {
-	min-height:75px;
+min-height:75px;
+
 }
 
 .container8
 {
-	min-height:300px;
-	background-color:#303030;
-	text-align:center;
+min-height:300px;
+background-color:#303030;
+text-align:center;
 }
 
 .hello
 {
-	margin-top:15px;
-	min-width:100%;
-	min-height:75px;
-	background-color:#0fa5bd;
-	padding-top:10px;
-	text-align:center;
+margin-top:15px;
+min-width:100%;
+min-height:75px;
+background-color:#0fa5bd;
+padding-top:10px;
+text-align:center;
 }
 
 .hello:hover
 {
-	margin-top:15px;
-	min-width:100%;
-	min-height:75px;
-	background-color:#444;
-	padding-top:10px;
-	text-align:center;
+margin-top:15px;
+min-width:100%;
+min-height:75px;
+background-color:#444;
+padding-top:10px;
+text-align:center;
 }
 
 .rowgrey
 {
-	background-color:#303030;
+background-color:#303030;
 }
-
-.imagecont
+		/*text n shizz*/
+		
+		
+		
+ul
 {
-	min-height:353px;
-	background-color:#666;
-	text-align:center;
-}
+list-style-type:none;
+margin-left:0px;
 
-.imagecont:hover
-{
-	min-height:350px;
-	background-color:#666;
-	border-style:solid;
-	border-color:#0fa5bd;
-	border-width:0px 0px 3px 0px;
-}
-
-.link:hover
-{
-	background-color:#666;
-	border-style:solid;
-	border-color:#cc0000;
-	border-width:0px 0px 3px 0px;
-}
-
-.link
-{
-	min-width:98px;
-	min-height:75px;
-	text-align:center;
-	padding:35px 10px 0px 10px;
-	border-style:solid;
-	border-color:transparent;
-	border-width:0px 0px 3px 0px;
-}
-
-
-
-
-
-#search
-{ 	
-
-	line-height: 32px;
-	font-size: 15pt;
-	width: 86%;
-}
-
-#searchbox
-{
-	background: #eaf8fc;
-	background-image: -moz-linear-gradient(#fff, #d4e8ec);
-	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, #d4e8ec),color-stop(1, #fff));
-	
-	-moz-border-radius: 35px;
-	border-radius: 35px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #c4d9df #a4c3ca #83afb7;            
-	width: 500px;
-	height: 40px;
-	padding: 10px;
-	margin: 100px auto 50px;
-	overflow: hidden; 
-}
-
-.container
-{
-	height: 75px;
-	background-color: grey;
-}
-
-h1
-{
-	font-size: 40px;
 }
 
 a:link {color:#fff;text-decoration:none;}      /* unvisited link */
@@ -163,3 +100,72 @@ a:visited {color:#fff;text-decoration:none;}  /* visited link */
 a:hover {color:#fff;text-decoration:none;}  /* mouse over link */
 a:active {color:#fff;text-decoration:none;}  /* selected link */
 
+.image
+{
+
+
+
+}
+.imagecont
+{
+min-height:353px;
+background-color:#666;
+text-align:center;
+}
+
+.imagecont:hover
+{
+min-height:350px;
+background-color:#666;
+border-style:solid;
+border-color:#0fa5bd;
+border-width:0px 0px 3px 0px;
+}
+.link:hover
+{
+background-color:#666;
+border-style:solid;
+border-color:#0fa5bd;
+border-width:0px 0px 3px 0px;
+}
+
+
+.link
+{
+min-width:98px;
+min-height:75px;
+text-align:center;
+padding:35px 10px 0px 10px;
+border-style:solid;
+border-color:transparent;
+border-width:0px 0px 3px 0px;
+}
+
+
+h2
+{
+padding-top:50px;
+padding-bottom:0px;
+margin:0px;
+
+}
+.down
+{
+padding-top:40px;
+padding-bottom:0px;
+margin:0px;
+display:none;
+}
+
+hr
+{
+max-width:1140px;
+color:#fff;
+padding:0px;
+margin-top:0px;
+}
+.text
+{
+color:#A4A1A1;
+text-align:justify;
+}
